# rasta-rs

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: rasta_receiver.rs  rasta_sender.rs  scip_receiver.rs  scip_sender.rs
rasta-rs/: Cargo.toml
rasta-rs/examples/: rasta_receiver.rs  rasta_sender.rs
rasta-rs/src/: lib.rs  message.rs  message_v1.rs
sci-rs/: Cargo.toml
sci-rs/examples/: scils_receiver.rs  scils_sender.rs  scip_receiver.rs  scip_sender.rs
sci-rs/src/: lib.rs  scils.rs  scip.rs  scitds.rs
src/: lib.rs  main.rs  message.rs  message_v1.rs  udp.rs
src/sci/: mod.rs  scils.rs  scip.rs
